[package]
name = "shaheen-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full", "server"] }
reqwest = { version = "0.11", features = ["json", "socks"] }
tokio-socks = "0.5"
url = "2.5"
base64 = "0.21"
once_cell = "1.17"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
futures = "0.3"
regex = "1.12.2"
